--- a/example.env
+++ b/example.env
@@ -1,4 +1,10 @@
-OPENAI_API_KEY=sk-proj-
+ASSISTANT_NAME=EvakkoBotti
 ADMIN_NUMBER=358
-OPENROUTER_API_KEY=sk-or-v1-
-ASSISTANT_NAME=
+MAX_MESSAGES=5
+
+LLM_PROVIDER=azure
+
+AZURE_ENDPOINT=https://xxx.openai.azure.com/
+AZURE_DEPLOYMENT_NAME=gpt-4.1-nano
+AZURE_SUBSCRIPTION_KEY=xxx
+AZURE_API_VERSION=2024-12-01-preview
